# amae-clinic-backend

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DATABASE_SCHEMA_ANALYSIS.md  DOCTOR_SEARCH_FIX.md  E2E_TEST_RESULTS.md  PRODUCTION_TESTING_GUIDE.md  README.md  VALIDATION_FIXES_SUMMARY.md  appointments_status_constraint_fix.sql  constraint_violation_fix.sql  create_admin_role.sql  create_indexes.sql  critical_schema_fixes_corrected.sql  database_schema_alignment_fixes.sql  deploy_comprehensive_fixes.sql  disable_rls_temporarily.sql  doctor_search_critical_fix.sql  document_payload.json  drop_all_rls_policies.sql  drop_problematic_policies.sql  enum_alignment_final_fix.sql  final_critical_fixes.sql  final_enum_mapping_fix.sql  fix_appointments_schema.sql  fix_auth_rls_policies.sql  fix_curl_commands.md  fix_rls_json_operators.sql  nx.json  package-lock.json  package.json  production_error_handling.rs  production_monitoring.rs  production_performance.rs  production_readiness_tests.sh  production_schema_fixes.sql  production_security.rs  remaining_critical_fixes.sql  scheduler_feature.md  (+1 more)
apps/api/: Cargo.toml
apps/api/src/: main.rs  router.rs
frontend/: BACKEND_INTEGRATION_STATUS.md
libs/appointment-cell/: Cargo.toml  cargo.toml
libs/appointment-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/appointment-cell/src/services/: advanced_scheduler.rs  booking.rs  conflict.rs  consistency.rs  lifecycle.rs  mod.rs  pricing.rs  telemedicine.rs  video_lifecycle.rs
libs/appointment-cell/tests/: advanced_scheduler_test.rs  handlers_test.rs  integration_test.rs  live_integration_test.rs  performance_test.rs  rls_security_test.rs  schema_validation_test.rs  video_lifecycle_test.rs
libs/auth-cell/: Cargo.toml
libs/auth-cell/src/: handlers.rs  router.rs
libs/auth-cell/tests/: handlers_test.rs  integration_test.rs
libs/booking-queue-cell/: Cargo.toml
libs/booking-queue-cell/src/: error.rs  handlers.rs  lib.rs  models.rs  router.rs
libs/booking-queue-cell/src/services/: consumer.rs  mod.rs  producer.rs  queue.rs  websocket.rs  worker.rs
libs/booking-queue-cell/tests/services/: consumer_test.rs  mod.rs  producer_test.rs  queue_test.rs  websocket_test.rs  worker_test.rs
libs/doctor-cell/: Cargo.toml  cargo.toml  doctor_cell_cleanup_summary.md
libs/doctor-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/doctor-cell/src/services/: availability.rs  doctor.rs  matching.rs  mod.rs  scheduling.rs
libs/doctor-cell/tests/: handlers_test.rs  integration_test.rs
libs/doctor-cell/tests/services/: availability.rs
libs/health-profile-cell/: Cargo.toml
libs/health-profile-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/health-profile-cell/src/services/: ai.rs  avatar.rs  document.rs  mod.rs  profile.rs
libs/health-profile-cell/tests/: handlers_test.rs  integration_test.rs
libs/monitoring-cell/: Cargo.toml
libs/monitoring-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/monitoring-cell/src/services/: alerts.rs  health.rs  metrics.rs  mod.rs
libs/monitoring-cell/tests/: integration_test.rs
libs/patient-cell/: Cargo.toml
libs/patient-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/patient-cell/src/services/: mod.rs  patient.rs
libs/performance-cell/: Cargo.toml
libs/performance-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/performance-cell/src/services/: cache.rs
libs/performance-cell/tests/: integration_test.rs
libs/security-cell/: Cargo.toml
libs/security-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/security-cell/src/services/: audit.rs  mod.rs  monitoring.rs  password.rs  validation.rs
libs/security-cell/tests/: integration_test.rs
libs/shared/config/: Cargo.toml
libs/shared/config/src/: lib.rs
libs/shared/database/: Cargo.toml
libs/shared/database/src/: supabase.rs
libs/shared/models/: Cargo.toml
libs/shared/models/src/: auth.rs  error.rs
libs/shared/utils/: Cargo.toml
libs/shared/utils/src/: extractor.rs  jwt.rs  lib.rs  test_utils.rs
libs/video-conferencing-cell/: Cargo.toml
libs/video-conferencing-cell/src/: handlers.rs  lib.rs  models.rs  router.rs
libs/video-conferencing-cell/src/services/: cloudflare.rs  integration.rs  mod.rs  session.rs
libs/video-conferencing-cell/tests/: handlers_test.rs  integration_test.rs
tests/: Cargo.toml  endpoint_integration_tests.rs
