[workspace]
resolver = "2"
members = [
    "apps/api",
    "libs/auth-cell",
    "libs/health-profile-cell",
    "libs/shared/config",
    "libs/shared/database",
    "libs/shared/models",
    "libs/shared/utils",
    "libs/doctor-cell",
    "libs/appointment-cell",
    "libs/video-conferencing-cell",
]

[workspace.dependencies]
# Shared dependencies
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http = "1.0.0"
hyper = "1.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
hmac = "0.12.1"
sha2 = "0.10.8"
anyhow = "1.0.75"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
base64 = "0.22.1"
dotenv = "0.15.0"
async-trait = "0.1.77"
futures = "0.3.30"

# Test dependencies
tokio-test = "0.4.4"
wiremock = "0.6.0"
assert_matches = "1.5.0"
mock_instant = "0.3.0"
tempfile = "3.8.1"
mockall = "0.13.1"

# Internal dependencies
auth-cell = { path = "libs/auth-cell" }
shared-config = { path = "libs/shared/config" }
shared-database = { path = "libs/shared/database" }
shared-models = { path = "libs/shared/models" }
shared-utils = { path = "libs/shared/utils" }
health-profile-cell = { path = "libs/health-profile-cell" }
doctor-cell = { path = "libs/doctor-cell" }
appointment-cell = { path = "libs/appointment-cell" }
video-conferencing-cell = { path = "libs/video-conferencing-cell" }