[package]
name = "amae-clinic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv ={ workspace = true }

# Internal dependencies
auth-cell = { workspace = true }
health-profile-cell = { workspace = true }
doctor-cell = { workspace = true }
appointment-cell = { workspace = true }
booking-queue-cell = { workspace = true }
video-conferencing-cell = { workspace = true }
patient-cell = { workspace = true }
security-cell = { workspace = true }
monitoring-cell = { workspace = true }
performance-cell = { workspace = true }
shared-config = { workspace = true }
shared-utils = { workspace = true }