[package]
name = "appointment-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true }
headers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
urlencoding = "2.1"

# Internal dependencies
shared-config = { workspace = true }
shared-database = { workspace = true }
shared-models = { workspace = true }
shared-utils = { workspace = true }
doctor-cell = { workspace = true }  # For availability checks
booking-queue-cell = { workspace = true }  # For async booking

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
assert_matches = { workspace = true }
tempfile = { workspace = true }