[package]
name = "auth-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"]  }
axum-extra = { workspace = true }
headers ={ workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

shared-config = { workspace = true }
shared-models = { workspace = true }
shared-database = { workspace = true }
shared-utils = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
assert_matches = { workspace = true }
tempfile = { workspace = true }