[package]
name = "health-profile-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
auth-cell = { workspace = true }
shared-config = { workspace = true }
shared-database = { workspace = true }
shared-models = { workspace = true }
shared-utils = { workspace = true }