[package]
name = "patient-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
axum-extra = "0.10"
chrono = { version = "0.4", features = ["serde"] }
headers = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal dependencies
shared-config = { path = "../shared/config" }
shared-database = { path = "../shared/database" }
shared-models = { path = "../shared/models" }
shared-utils = { path = "../shared/utils" }