[package]
name = "performance-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
shared-config = { workspace = true }
shared-utils = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }