[package]
name = "video-conferencing-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true }
headers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Internal dependencies
shared-config = { workspace = true }
shared-database = { workspace = true }
shared-models = { workspace = true }
shared-utils = { workspace = true }
appointment-cell = { workspace = true }  # For appointment integration

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
assert_matches = { workspace = true }
tempfile = { workspace = true }