[package]
name = "shared-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

shared-config = { workspace = true }
shared-models = { workspace = true }