[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }

shared-models = { workspace = true }
shared-config = { workspace = true }