[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }

shared-models = { workspace = true }
shared-config = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
assert_matches = { workspace = true }